name:                http3-examples
version:             0.0.0
synopsis:            QUIC examples
description:         Example server and client for Haskell HTTP/3 library
license:             BSD3
license-file:        LICENSE
author:              Kazu Yamamoto
maintainer:          kazu@iij.ad.jp
-- copyright:
category:            Web
build-type:          Simple
-- extra-source-files:  ChangeLog.md
cabal-version:       >= 1.10

executable server
  default-language:     Haskell2010
  hs-source-dirs:       .
  main-is:              server.hs
  other-modules:        Common
  ghc-options:          -Wall -threaded -rtsopts
  build-depends:        base >= 4.0 && < 5
                      , base16-bytestring
                      , bytestring
                      , filepath
                      , http-types
                      , http2
                      , http3
                      , quic
                      , tls
                      , tls-session-manager
  if impl(ghc >= 8)
      Default-Extensions:  Strict StrictData

executable client
  default-language:     Haskell2010
  hs-source-dirs:       .
  main-is:              client.hs
  other-modules:        Common
  ghc-options:          -Wall -threaded -rtsopts
  build-depends:        base >= 4.0 && < 5
                      , base16-bytestring
                      , bytestring
                      , filepath
                      , http-types
                      , http3
                      , quic
                      , tls
                      , unix-time
  if impl(ghc >= 8)
      Default-Extensions:  Strict StrictData
